--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,8 @@
 // Core palette
 $color-primary: #654c3b;
 $color-bg: #f8f3ef;
-$color-surface: #ebe1d7;
+$color-bg-light: #f8f3ef50;
+$color-surface: #ebe1d7c7;
 $color-text: #3a2c23;
 $color-muted: #7a6a5f;
 $color-border: #d9cfc6;
