--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,6 +17,7 @@
   /* Colors */
   --color-primary: #{$color-primary};
   --color-bg: #{$color-bg};
+  --color-bg-light: #{$color-bg-light};
   --color-surface: #{$color-surface};
   --color-text: #{$color-text};
   --color-muted: #{$color-muted};
